# cpp-skeleton

./: .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md  Vagrantfile  build.sh  init-project.sh  job.xml  sonar-project.properties  sync-project.sh
configuration/: job.xml  project.sh
debian/: changelog  control  copyright
documentation/: CHANGELOG.md  CONVENTIONS.md
documentation/dictionary/: skeleton.dic
documentation/man/: other.1.ronn
script/: build.sh
script/cpp/: build.sh
script/docker/: build.sh
script/docker/development/: create.sh  destroy.sh  start.sh  stop.sh
script/job-configuration/: delete.sh  download.sh  update.sh  upload.sh
script/skeleton/: initialize.sh  synchronize.sh
src/: boilerplate.cpp
